--- a/Front End/src/Components/Input/input.css
+++ b/Front End/src/Components/Input/input.css
@@ -1,10 +1,10 @@
 .custom-input {
-    padding: 10px;
+    padding: 15px;
     margin: 10px;
     border: 1px solid #ddd;
     border-radius: 8px;
     transition: border-color 0.3s ease;
-    width: 100%;
+    width: 85%;
   }
   
   .custom-input:focus {
@@ -19,7 +19,8 @@
   }
 
   .custom-input select {
-    border-radius: 0; /* Remove border-radius for the select element */
+    border-radius: 0; 
+    width: 90%;
   }
   
   /* Media Query for Mobile Responsive */
