--- a/Front End/src/Pages/Landing/landing.css
+++ b/Front End/src/Pages/Landing/landing.css
@@ -46,18 +46,20 @@
   }
   
   button {
-    background-color: #4613fe;
+    background-color: #520570;
     color: #fff;
-    padding: 10px 20px;
+    padding: 10px 17px;
     font-size: 16px;
     border: none;
     cursor: pointer;
     margin-top: 10px;
-    border-radius: 18px;
+    margin-block: 10px;
+    border-radius: 5px;
   }
   
   button:hover {
-    background-color: #050770;
+    background-color: #b739d7;
+    color: #fff;
   }
   
   footer {
@@ -66,6 +68,9 @@
   }
   
   @media screen and (max-width: 768px) {
+    .welcome-image {
+      display: none;
+    }
     .landing-page-header-logo-image{
       width: 50%;
       height: 50%;
