--- a/Front End/src/Components/Input/input.css
+++ b/Front End/src/Components/Input/input.css
@@ -4,7 +4,7 @@
     border: 1px solid #ddd;
     border-radius: 8px;
     transition: border-color 0.3s ease;
-    width: 85%;
+    width: 95%;
   }
   
   .custom-input:focus {
@@ -26,8 +26,8 @@
   /* Media Query for Mobile Responsive */
   @media (max-width: 1000px) {
     .custom-input {
-      max-width: calc(50% - 50px);
-      width: 100%;
+      /* max-width: calc(50% - 50px); */
+      width: 95%;
       box-sizing: border-box;
     }
   }
