--- a/Front End/src/Components/MenuBar/menubar.css
+++ b/Front End/src/Components/MenuBar/menubar.css
@@ -93,6 +93,13 @@
   border-radius: 5px;
 }
 
+.user-name{
+  margin-left: 10px;
+  font-size: 1.2em;
+  color: white;
+  padding: 12px 0px 0px 6px;
+}
+
 @media (min-width:601px) {
   .mobile-menu{
     display: none;
