--- a/FrontEnd/src/Pages/Application/application.css
+++ b/FrontEnd/src/Pages/Application/application.css
@@ -1,4 +1,11 @@
-.container{
+.full-container{
+  display: flex;
+  flex-direction: column;
+  /* background-color: red;  */
+  height: 100%;
+}
+
+.menubar-container{
   height: 15vh;
 }
 
@@ -7,7 +14,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  height: 70vh;
+  height: 83vh;
 }
 
 .form-container {
@@ -31,20 +38,21 @@
   text-align: center;
 }
 
-.image-container {
+.img-container {
   width: 40%;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  margin-top: 55px 
+  margin-top: 55px;
+  height: 83vh;
 }
 
 .side-image {
-  width: 80%;
   height: auto;
   border-radius: 4px;
   justify-content: center;
+  width: 60%;
 }
 
 .select-input {
