Revert "Merge pull request #35 from janithht/front_end"
This reverts commit 15c72ce31e3d08d721b3cb9a40b128fa647b5e4a, reversing
changes made to f508680b9b65a14aac936c75f46bfaab5dd8ec1a.

--- a/FrontEnd/src/Components/Input/input.css
+++ b/FrontEnd/src/Components/Input/input.css
@@ -1,10 +1,10 @@
 .custom-input {
-  padding: 10px;
+  padding: 15px;
   margin: 10px;
   border: 1px solid #ddd;
   border-radius: 8px;
   transition: border-color 0.3s ease;
-  width: 85% !important;
+  width: 95%;
 }
 
 .custom-input:focus {
@@ -18,9 +18,9 @@
   outline: none;
 }
 
-.select-input {
-  border-radius: 8px;
-  width: 95% ;
+.custom-input select {
+  border-radius: 0;
+  width: 90%;
 }
 .date-divider {
   font-size: 12px;
