--- a/FrontEnd/src/Pages/Dashboard/dashboard.css
+++ b/FrontEnd/src/Pages/Dashboard/dashboard.css
@@ -1,9 +1,12 @@
+.container {
+  height: 15vh;
+}
+
 .main-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 10vh;
 }
 
 .menu-container {
