--- a/FrontEnd/src/Components/MenuBar/menubar.css
+++ b/FrontEnd/src/Components/MenuBar/menubar.css
@@ -1,4 +1,4 @@
-.menu-bar {
+ .menu-bar {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -7,10 +7,6 @@
   color: white;
 }
 
-/* .menu-bar p {
-  font-size: 1.5em;
-  margin: 0;
-} */
 
 .nav-menu{
   display: flex;
@@ -32,9 +28,6 @@
   padding: 0px 4px;
 }
 
-.menu-btn{
-  border: none !important;
-}
 
 .menu-dot {
   display: block;
@@ -57,9 +50,9 @@
 }
 
 .menu-item {
-  background-color: #BA68C8;
+  background-color: #BA68C8 !important;
   color: white;
-  border: none;
+  border: none !important;
   padding: 10px;
   text-align: left;
   text-decoration: none;
@@ -134,4 +127,3 @@
     display: none;
   }
 }
-
