--- a/FrontEnd/src/Components/MenuBar/menubar.css
+++ b/FrontEnd/src/Components/MenuBar/menubar.css
@@ -32,9 +32,9 @@
   padding: 0px 4px;
 }
 
-.menu-btn{
+/* .menu-btn{
   border: none !important;
-}
+} */
 
 .menu-dot {
   display: block;
@@ -57,9 +57,9 @@
 }
 
 .menu-item {
-  background-color: #BA68C8;
+  background-color: #BA68C8 !important;
   color: white;
-  border: none;
+  border: none !important;
   padding: 10px;
   text-align: left;
   text-decoration: none;
@@ -134,4 +134,3 @@
     display: none;
   }
 }
-
