--- a/FrontEnd/src/Pages/AdminDashboard/adminDashboard.css
+++ b/FrontEnd/src/Pages/AdminDashboard/adminDashboard.css
@@ -1,15 +1,13 @@
 .main-container2 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 1800px; /* Adjust as needed */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 90vw;
+  background-color: #ffffff;
+  margin: 2vw 5vw 2vw 5vw ; 
+}
 
-    /* border: 2px solid #007bff; */
-    /* border-radius: 15px; */
-    background-color: #ffffff;
-    margin: 20px auto; /* Auto margin for centering horizontally */
-  }
   
   /* .menu-container {
     display: flex;
