--- a/FrontEnd/src/Pages/Dashboard/dashboard.css
+++ b/FrontEnd/src/Pages/Dashboard/dashboard.css
@@ -1,12 +1,9 @@
-.container {
-  height: 15vh;
-}
-
 .main-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 10vh;
 }
 
 .menu-container {
@@ -59,9 +56,7 @@
   padding: 10px;
   margin-bottom: 10px;
   margin-top: 2px;
-  /* overflow-wrap: break-word; */
   max-width: 100%;
-  /* word-wrap: break-word; */
   word-break: break-all;
   hyphens: auto;
   text-align: justify;
@@ -101,6 +96,30 @@
   flex-direction: column;
   align-items: flex-end;
   
+}
+.date-divider {
+  font-size: 13px;
+  display: flex;
+  justify-content: center;
+  font-weight: 400;
+  align-items: center;
+  margin: 10px 0px;
+}
+
+.date-divider::before, .date-divider::after {
+  flex: 1;
+  content: '';
+  padding: .6px;
+  background: #000;
+  background-color: rgb(165, 163, 163);
+  margin: 5px;
+}
+
+.date-divider span {
+  padding: 2px 10px;
+  background-color: rgb(73, 72, 72);
+  color: #fff;
+  border-radius: 4px;
 }
 
 @media (max-width: 1500px) {
