--- a/FrontEnd/src/Components/TanstackTable/TanstackTable.css
+++ b/FrontEnd/src/Components/TanstackTable/TanstackTable.css
@@ -14,7 +14,7 @@
 
   .tick, .cross{
     width: 25px;
-    margin-left: 10px;
+    /* margin-left: 10px; */
   }
 
 
@@ -68,4 +68,13 @@
     cursor: pointer;
   }
 
-
+div .data-table-image{
+  /* display: flex !important;
+  justify-content: center !important; */
+  margin-right: 50px;
+}
+.data-table-image{
+  display: flex !important;
+  justify-content: center !important;
+  margin-left: 20px;
+}
