--- a/FrontEnd/src/Components/TanstackTable/TanstackTable.css
+++ b/FrontEnd/src/Components/TanstackTable/TanstackTable.css
@@ -30,7 +30,7 @@
     justify-content: flex-end;
   }
   
-  #searchQueryInput {
+  /* #searchQueryInput {
     width: 300px;
     height: 2.5rem;
     background: #f5f5f5;
@@ -39,7 +39,7 @@
     border-radius: 1.625rem;
     padding: 0 3.5rem 0 1.5rem;
     font-size: 1rem;
-  }
+  } */
   
   #searchQuerySubmit {
     width: 3.5rem;
