--- a/FrontEnd/src/Pages/StatusChecks/statuschecks.css
+++ b/FrontEnd/src/Pages/StatusChecks/statuschecks.css
@@ -19,6 +19,7 @@
     border-collapse: collapse;
     margin-top: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    font-size: 10pt;
   }
   
    tr {
@@ -62,8 +63,31 @@
 
   .expanded-row-div{
     display: flex;
-    justify-content: flex-start;
+    /* justify-content: ; */
     flex-direction: column;
+    align-content: flex-start;
+    flex-wrap: wrap;
+    text-align: left;
+    margin-left: 10px;
+  }
+
+  .approved-text{
+    color: #79b374;
+    /* font-weight: bold; */
+    font-style: italic;
+  }
+
+  .incorrect-text{
+    color: red;
+    /* font-weight: bold; */
+    font-style: italic;
+  }
+
+  .check-div{
+    /* width: 80vw; */
+    display: flex;
+    justify-content: space-between;
+    /* margin: 0px 20vw; */
   }
   
   .check-icon, .cross-icon {
